--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-      "name": "Pastelería Web App",
+      "name": "pasteleria-web-app",
       "version": "0.1.0",
+      "type": "module",
       "private": true,
       "dependencies": {
             "@jsr/supabase__supabase-js": "^2.49.8",
@@ -55,8 +56,15 @@
             "vite-plugin-pwa": "*"
       },
       "devDependencies": {
+            "@tailwindcss/postcss": "^4.1.16",
             "@types/node": "^20.10.0",
+            "@types/react": "^19.2.2",
+            "@types/react-dom": "^19.2.2",
             "@vitejs/plugin-react-swc": "^3.10.2",
+            "autoprefixer": "^10.4.21",
+            "postcss": "^8.5.6",
+            "tailwindcss": "^4.1.16",
+            "typescript": "^5.9.3",
             "vite": "^6.4.1"
       },
       "scripts": {
