--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-      "name": "pasteleria-web-app",
+      "name": "Pastelería Web App",
       "version": "0.1.0",
-      "type": "module",
       "private": true,
       "dependencies": {
             "@jsr/supabase__supabase-js": "^2.49.8",
@@ -32,7 +31,11 @@
             "@radix-ui/react-toggle-group": "^1.1.2",
             "@radix-ui/react-tooltip": "^1.1.8",
             "@supabase/supabase-js": "*",
+            "@tailwindcss/aspect-ratio": "^0.4.2",
+            "@tailwindcss/forms": "^0.5.10",
+            "@tailwindcss/typography": "^0.5.19",
             "@vitejs/plugin-react": "*",
+            "autoprefixer": "^10.4.22",
             "class-variance-authority": "^0.7.1",
             "clsx": "*",
             "cmdk": "^1.1.1",
@@ -44,6 +47,7 @@
             "lucide-react": "^0.487.0",
             "next-themes": "^0.4.6",
             "path": "*",
+            "postcss": "^8.5.6",
             "react": "^18.3.1",
             "react-day-picker": "^8.10.1",
             "react-dom": "^18.3.1",
@@ -52,19 +56,13 @@
             "recharts": "^2.15.2",
             "sonner": "^2.0.3",
             "tailwind-merge": "*",
+            "tailwindcss": "^4.1.17",
             "vaul": "^1.1.2",
             "vite-plugin-pwa": "*"
       },
       "devDependencies": {
-            "@tailwindcss/postcss": "^4.1.16",
             "@types/node": "^20.10.0",
-            "@types/react": "^19.2.2",
-            "@types/react-dom": "^19.2.2",
             "@vitejs/plugin-react-swc": "^3.10.2",
-            "autoprefixer": "^10.4.21",
-            "postcss": "^8.5.6",
-            "tailwindcss": "^4.1.16",
-            "typescript": "^5.9.3",
             "vite": "^6.4.1"
       },
       "scripts": {
