--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-      "name": "Pastelería Web App",
+      "name": "pasteleria-web-app",
       "version": "0.1.0",
+      "type": "module",
       "private": true,
       "dependencies": {
             "@jsr/supabase__supabase-js": "^2.49.8",
@@ -31,11 +32,7 @@
             "@radix-ui/react-toggle-group": "^1.1.2",
             "@radix-ui/react-tooltip": "^1.1.8",
             "@supabase/supabase-js": "*",
-            "@tailwindcss/aspect-ratio": "^0.4.2",
-            "@tailwindcss/forms": "^0.5.10",
-            "@tailwindcss/typography": "^0.5.19",
             "@vitejs/plugin-react": "*",
-            "autoprefixer": "^10.4.22",
             "class-variance-authority": "^0.7.1",
             "clsx": "*",
             "cmdk": "^1.1.1",
@@ -47,7 +44,6 @@
             "lucide-react": "^0.487.0",
             "next-themes": "^0.4.6",
             "path": "*",
-            "postcss": "^8.5.6",
             "react": "^18.3.1",
             "react-day-picker": "^8.10.1",
             "react-dom": "^18.3.1",
@@ -56,14 +52,20 @@
             "recharts": "^2.15.2",
             "sonner": "^2.0.3",
             "tailwind-merge": "*",
-            "tailwindcss": "^4.1.17",
             "vaul": "^1.1.2",
+            "vite": "*",
             "vite-plugin-pwa": "*"
       },
       "devDependencies": {
+            "@tailwindcss/aspect-ratio": "^0.4.2",
+            "@tailwindcss/forms": "^0.5.10",
+            "@tailwindcss/typography": "^0.5.19",
             "@types/node": "^20.10.0",
             "@vitejs/plugin-react-swc": "^3.10.2",
-            "vite": "^6.4.1"
+            "autoprefixer": "^10.4.22",
+            "postcss": "^8.5.6",
+            "tailwindcss": "^3.4.18",
+            "vite": "6.3.5"
       },
       "scripts": {
             "dev": "vite",
